--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,16 @@ node_js:
   - "5"
   - "4"
 
+env:
+  - CXX=g++-4.8
+
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
+
 script:
   - npm test
 
